# factor

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  echo.sh  example-auth0.factor  example-clients.json  example.factor  example.factor-app  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/factor/: Cargo.toml
crates/factor-commands/: Cargo.toml  README.md
crates/factor-commands/src/: create.rs  lib.rs
crates/factor-core/: Cargo.toml  README.md
crates/factor-core/src/: env.rs  identity.rs  lib.rs
crates/factor-core/src/providers/: auth0.rs  dummy.rs  k8s.rs  local.rs
crates/factor-env/: Cargo.toml  README.md
crates/factor-env/src/: detection.rs  lib.rs
crates/factor-env/src/kinds/: classic.rs  file_ref.rs  mod.rs
crates/factor-env/src/state/: env.rs  fs.rs  http.rs  mock.rs  mod.rs
crates/factor-error/: Cargo.toml  README.md
crates/factor-error/src/: lib.rs  sources.rs
crates/factor/src/: child.rs  env.rs  identity.rs  lib.rs  main.rs  ngrok.rs  proxy.rs
crates/factor/src/identity/providers/: dummy.rs
src/: child.rs  dirs.rs  env.rs  lib.rs  main.rs  ngrok.rs  proxy.rs  server.rs
src/identity/: mod.rs
src/identity/providers/: auth0.rs  dummy.rs  k8s.rs  local.rs  mod.rs
