[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/twelve-factor/factor"

[workspace.dependencies]
rustc-hash = "2.1.0"
educe = "0.6.0"
derive_more = { version = "1.0.0", features = ["full"] }
derive-new = "0.7.0"
snafu = "0.8.5"

[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"

suspicious = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
disallowed-macros = "deny"
