[package]
name = "factor-commands"
description = "Commands for running twelve-factor apps locally"
version = "0.1.0"
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
factor-core.workspace = true
clap = { version = "4.5.23", features = ["derive", "env"] }

[lints]
workspace = true
