[package]
name = "factor-core"
description = "Shared core utilities for factor crates"
version = "0.1.0"
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
factor-error.workspace = true
serde.workspace = true
strum.workspace = true
reqwest.workspace = true
k8s-openapi.workspace = true
rsa.workspace = true

base64 = "0.22.1"
biscuit = "0.7.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
sha2 = "0.10.8"
num-bigint = "0.4.6"
serde_json = { workspace = true, features = ["preserve_order"] }
chrono = "0.4.39"
http.workspace = true
log.workspace = true
kube.workspace = true
tokio.workspace = true
serde_with = "3.12.0"
shellexpand.workspace = true

[lints]
workspace = true
