[package]
name = "factor-env"
description = "Config variables for twelve factor apps, with support for reference variables"
version = "0.1.0"
categories = ["command-line-utilities"]
keywords = ["dotenv", "env", "twelve-factor"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
factor-error = { path = "../factor-error" }

vfs = { version = "0.12.0", features = ["embedded-fs"] }
dotenvy = "0.15.7"
o2o = "0.5.0"
derive_builder = "0.20.2"
serde = { version = "1.0.216", features = ["derive"] }
http = "1.2.0"
reqwest = "0.12.9"
wiremock = { version = "0.6.2", optional = true }
async-trait = "0.1.83"
url = "2.5.4"
preinterpret = "0.2.0"
vfs-tools = "0.1.0"
notify-types = "1.0.1"
notify = { version = "7.0.0", optional = true }

educe.workspace = true
rustc-hash.workspace = true
derive_more.workspace = true
derive-new.workspace = true
snafu.workspace = true

[dev-dependencies]
factor-env = { path = ".", features = ["mock"] }

[features]
physical = ["notify"]
mock = ["dep:wiremock"]
default = ["physical"]
